# agon

./: .gitignore  .gitmodules  .mcp.json.example  AGENT.md  AGENTS.md  AGON-GOAL-DESIGN.md  AGON.md  CLAUDE.md  CONTRIBUTING.md  KERN-GAPS.md  README.md  kern.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.Codex/specs/: kern-4.5-toolchain-upgrade.md
.github/: SUBMODULE_CI_SETUP.md
.github/workflows/: ci.yml  release.yml
.kern/: kern-test-baseline.json  self-coverage-baseline.json
.provenance-tasks/: 01-write-provenance-report.md  modularize-queue.json  modularize-queue.jsonl
agon-goals/: cesar-claude-code-parity-review.md
docs/: KERN-GAP-scroll-box.md  modes.md  task-a-bugs.md  transformers-pipeline-architecture-analysis.md
docs/plans/: 2025-06-27-speculative-routing.md  2026-03-24-cesar-scout-bids.md  improvement-audit.md  kern-compiler-gaps.md  kern-gaps-campfire-prompt.md  v2-multi-repo-orchestrator.md  v2-phase1-plan-model-v2.md  v2-phase1-plan-model.kern  v2-phase1-plan-model.md  v2-spec.kern
docs/specs/: global-elo-leaderboard.md  kern-structure-refactor.md  smart-auto-permissions.md  unified-execution-job-control-plane.md
docs/troubleshooting/: agon-install.md
engines/: agy.json  aider.json  antigravity.json  claude.json  codex.json  gemini.json  kimi-code.json  minimax-coding-plan-minimax-m3.json  minimax.json  mistral.json  ollama.json  opencode.json  openrouter.json  qwen.json
kern_engines/: README.md  index.ts  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
kern_engines/cli/: __init__.py  claude.ts  configs.py  daemon.py  model_probe.py  pty_session.py  session.ts
kern_engines/examples/: use-claude-cli.kern
kern_engines/py/kern_engines/: __init__.py
kern_engines/py/kern_engines/cli/: claude.py  configs.py  daemon.py  model_probe.py  pty_session.py
kern_engines/py/tests/: test_extract_response.py
patches/: @kernlang+core+3.4.9.patch  @kernlang+review+3.3.4.patch  ink+5.2.1.patch
plugins/agon-orchestrator/: .mcp.json
scripts/: agon-init.sh  check-kern-native-coverage.mjs  check-kern-self-coverage.mjs  claude-tui-probe.py  generate-mode-docs.mjs  install-test.sh  kern-cli-resolver.mjs  kern-source-traces.mjs  postinstall.mjs  run-agon-script.mjs  run-kern-compile.mjs  run-kern-gaps.mjs  run-kern-review.mjs  run-kern-test.mjs  run-node22.mjs
scripts/guard/: README.md  confidence-tracker.mjs  confidence.jsonl  engine-pool-rfc.md  forge-retry.mjs  pre-commit-kern.mjs  reexport-surface.mjs
scripts/release/: publish-if-new.mjs  set-version.mjs
tests/: setup.ts
(+342 files in other folders)
