[project]
name = "kern-engines"
version = "0.1.0"
description = "Engine substrates that drive third-party CLI/API agents on behalf of agon."
requires-python = ">=3.9"
# Runtime is stdlib-only (pty, select, signal, fcntl, termios, json).
# No third-party packages are required to use ClaudeCliSession, the
# daemon, or scripts/claude-tui-probe.py. All terminal-emulator handling
# is bytes-only — pyte / xterm-headless are deliberately not used (they
# hang on the Claude TUI byte stream).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kern_engines", "kern_engines.cli"]
package-dir = {"kern_engines" = ".", "kern_engines.cli" = "cli"}
