[project]
name = "kern-engines"
version = "0.1.0"
description = "Engine substrates that drive third-party CLI/API agents on behalf of agon."
requires-python = ">=3.9"
# Runtime is stdlib-only (pty, select, signal, fcntl, termios, json).
# No third-party packages are required to use ClaudeCliSession, the
# daemon, or scripts/claude-tui-probe.py. All terminal-emulator handling
# is bytes-only — pyte / xterm-headless are deliberately not used (they
# hang on the Claude TUI byte stream).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The Python package lives under py/ (py/kern_engines/...) so it sits as a
# sibling of the built JS (dist/). The TS shell sets PYTHONPATH to <pkg>/py
# from its own location, so `python3 -m kern_engines.cli.daemon` resolves
# identically in this repo AND when @agon/kern-engines is npm-installed into
# node_modules — no cwd dependence, no pip required for end users. `pip install
# -e .` still works for Python-only dev via this package-dir.
[tool.setuptools]
packages = ["kern_engines", "kern_engines.cli"]
package-dir = {"" = "py"}
